@@ -174,7 +174,8 @@ class mysqlconnection : public sqlrconnection_svr {
 		const char	*bindFormat();
 		const char	*getDatabaseListQuery(bool wild);
 		const char	*getTableListQuery(bool wild);
-		const char	*getColumnListQuery(bool wild);
+		const char	*getColumnListQuery(const char *table,
+								bool wild);
 		const char	*selectDatabaseQuery();
 		const char	*getCurrentDatabaseQuery();
 		bool		getLastInsertId(uint64_t *id);
@@ -431,7 +432,8 @@ const char *mysqlconnection::getTableListQuery(bool wild) {
 	return (wild)?"show tables like '%s'":"show tables";
 }
 
-const char *mysqlconnection::getColumnListQuery(bool wild) {
+const char *mysqlconnection::getColumnListQuery(const char *table,
+								bool wild) {
 	return (wild)?"select "
 			"	column_name, "
 			"	data_type, "
