@@ -38,7 +38,8 @@ class postgresqlconnection : public sqlrconnection_svr {
 		const char	*dbIpAddress();
 		const char	*getDatabaseListQuery(bool wild);
 		const char	*getTableListQuery(bool wild);
-		const char	*getColumnListQuery(bool wild);
+		const char	*getColumnListQuery(const char *table,
+								bool wild);
 		const char	*selectDatabaseQuery();
 		const char	*getCurrentDatabaseQuery();
 		bool		getLastInsertId(uint64_t *id);
@@ -439,7 +440,8 @@ const char *postgresqlconnection::getTableListQuery(bool wild) {
 		"	table_name";
 }
 
-const char *postgresqlconnection::getColumnListQuery(bool wild) {
+const char *postgresqlconnection::getColumnListQuery(const char *table,
+								bool wild) {
 	return (wild)?
 		"select "
 		"	column_name, "
