@@ -575,7 +575,8 @@ const char *sqlrconnection_svr::getTableListQuery(bool wild) {
 	return "select 1";
 }
 
-const char *sqlrconnection_svr::getColumnListQuery(bool wild) {
+const char *sqlrconnection_svr::getColumnListQuery(const char *table,
+								bool wild) {
 	return "select 1";
 }
 
